--- a/iCodeThis/Groups/index.html
+++ b/iCodeThis/Groups/index.html
@@ -8,24 +8,32 @@
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
     />
 
-    <link rel="stylesheet" href="style.css" />
+    <!--Rajdhani font-->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
 
-    <!-- Remove the line below if you don't want to use TailwindCSS -->
     <script src="https://cdn.tailwindcss.com"></script>
+
+    <link rel="stylesheet" href="style.css" />
+    <script src="script.js" defer></script>
   </head>
 
   <!-- Change code below this line -->
 
-  <body class="bg-[--black-dark] flex justify-center items-center min-h-screen">
+  <body class="bg-black-800 flex justify-center items-center min-h-screen">
     <div
-      class="min-h-[50dvh] w-[60vw] bg-[--black-light] rounded-xl grid grid-cols-[3rem_1fr] grid-rows-[3.5rem_1fr] p-5 text-[--text-normal] [&_span]:text-[--text-dark] [&_button:hover_span]:text-[--text-normal] gap-x-8"
+      class="min-h-[50dvh] w-[60vw] bg-black-400 rounded-xl grid grid-cols-[3rem_1fr] grid-rows-[3.5rem_1fr] p-5 text-text-400 [&_span]:text-text-900 [&_button:hover_span]:text-text-400 gap-x-8"
     >
       <!--Side Bar-->
       <nav
-        class="bg-[--black-dark] rounded-xl flex flex-col justify-center row-span-2"
+        class="bg-black-800 rounded-xl flex flex-col justify-center row-span-2"
       >
         <ul
-          class="space-y-4 [&>[aria-selected=true]]:bg-[--black-light] [&>[aria-selected=true]]:p-1 [&>[aria-selected=true]]:rounded-xl [&>[aria-selected=true]_span]:text-[--text-normal] flex flex-col items-center"
+          class="space-y-4 [&>[aria-selected=true]]:bg-black-400 [&>[aria-selected=true]]:p-1 [&>[aria-selected=true]]:rounded-xl [&>[aria-selected=true]_span]:text-text-400 flex flex-col items-center"
         >
           <li>
             <button>
@@ -55,7 +63,7 @@
           <span class="material-symbols-outlined"> west </span>
           <h1 class="text-xl font-bold">Groups</h1>
         </button>
-        <div class="[&_button]:bg-[--black-dark] [&_span]:p-2">
+        <div class="[&_button]:bg-black-800 [&_span]:p-2">
           <button data-set-display="grid" class="rounded-l-xl">
             <span class="material-symbols-outlined"
               >view_comfy_alt</span
@@ -70,17 +78,17 @@
         data-display="grid"
         class="grid [&_button]:relative [&_button]:rounded-xl [&_p]:text-xs [&_h2]:mt-2 gap-4"
       >
-        <button class="bg-[--black-xlight]">
+        <button class="bg-black-100">
           <div>
             <div
-              class="bg-[--black-dark] rounded-[50vw] w-[2rem] h-[2rem] grid items-center mx-auto"
+              class="bg-black-800 rounded-[50vw] w-[2rem] h-[2rem] grid items-center mx-auto"
             >
               <span class="material-symbols-outlined"> add </span>
             </div>
             <h2 class="text-xs">Create Group</h2>
           </div>
         </button>
-        <button data-notification class="bg-[--black-dark]">
+        <button data-notification class="bg-black-800">
           <div>
             <img
               class="mx-auto rounded-[50vw]"
@@ -91,7 +99,7 @@
             <p>36 members</p>
           </div>
         </button>
-        <button class="bg-[--black-dark]">
+        <button class="bg-black-800">
           <div>
             <img
               class="mx-auto rounded-[50vw]"
@@ -102,7 +110,7 @@
             <p>9 members</p>
           </div>
         </button>
-        <button data-notification class="bg-[--black-dark]">
+        <button data-notification class="bg-black-800">
           <div>
             <img
               class="mx-auto rounded-[50vw]"
@@ -113,7 +121,7 @@
             <p>27 members</p>
           </div>
         </button>
-        <button data-notification class="bg-[--black-dark]">
+        <button data-notification class="bg-black-800">
           <div>
             <img
               class="mx-auto rounded-[50vw]"
@@ -124,7 +132,7 @@
             <p>105 members</p>
           </div>
         </button>
-        <button class="bg-[--black-dark]">
+        <button class="bg-black-800">
           <div>
             <img
               class="mx-auto rounded-[50vw]"
@@ -135,7 +143,7 @@
             <p>97 members</p>
           </div>
         </button>
-        <button class="bg-[--black-dark]">
+        <button class="bg-black-800">
           <div>
             <img
               class="mx-auto rounded-[50vw]"
