--- a/iCodeThis/Groups/index.html
+++ b/iCodeThis/Groups/index.html
@@ -26,7 +26,7 @@
 
   <body class="bg-black-800 flex justify-center items-center min-h-screen">
     <div
-      class="min-h-[50dvh] w-[60vw] bg-black-400 rounded-xl grid grid-cols-[3rem_1fr] grid-rows-[3.5rem_1fr] p-5 text-text-400 [&_span]:text-text-900 [&_button:hover_span]:text-text-400 gap-x-8"
+      class="min-h-[50dvh] bg-black-400 rounded-xl grid grid-cols-[3rem_1fr] grid-rows-[3.5rem_1fr] p-5 text-text-400 [&_span]:text-text-900 [&_button:hover_span]:text-text-400 gap-x-8"
     >
       <!--Side Bar-->
       <nav
